aws s3 implementation | secret code changed
