# src/main/java/com/crossuniversity/securityservice/controller/TestController.java
@@ -1,7 +1,5 @@
 package com.crossuniversity.securityservice.controller;
 
-import com.crossuniversity.securityservice.mapper.LibraryMapper;
-import com.crossuniversity.securityservice.repository.LibraryRepository;
 import com.crossuniversity.securityservice.service.MailService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -10,47 +8,42 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.Bucket;
+
+import java.util.List;
 
 @RestController
 @RequestMapping("/test")
 public class TestController {
     private final MailService mailService;
-    private final LibraryMapper libraryMapper;
-    private final LibraryRepository libraryRepository;
+    private final S3Client s3Client;
+
     @Autowired
-    public TestController(MailService mailService,
-                          LibraryMapper libraryMapper,
-                          LibraryRepository libraryRepository) {
+    public TestController(MailService mailService, S3Client s3Client) {
         this.mailService = mailService;
-        this.libraryMapper = libraryMapper;
-        this.libraryRepository = libraryRepository;
+        this.s3Client = s3Client;
     }
 
     @GetMapping("/hello")
-    public String hello(){
+    public String hello() {
         return "HELLO";
     }
 
     @PostMapping("/mail")
-    public ResponseEntity<String> sendEmail(String context){
+    public ResponseEntity<String> sendEmail(String context) {
         mailService.sendEmail("sagittariusdew@gmail.com", "CrossUniLibrary", context);
         return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
-//    @GetMapping("/dto-test")
-//    public ResponseEntity<LibraryDTO> libraryToDTO(){
-//        Library library = libraryRepository.findById(6L).get();
-//
-//
-//        LibraryDTO libraryDTO = LibraryDTO.builder()
-//                .title("test")
-//                .build();
-//
-//        libraryMapper.updateEntity(libraryDTO, library);
-//
-//        libraryRepository.save(library);
-//
-//        LibraryDTO updatedLibraryDTO = libraryMapper.mapToDTO(library);
-//        return new ResponseEntity<>(updatedLibraryDTO, HttpStatus.OK);
-//    }
+    @GetMapping("/s3")
+    public ResponseEntity<List<String>> getBuckets() {
+
+        s3Client.listBuckets();
+        List<String> buckets = s3Client.listBuckets().buckets()
+                .stream()
+                .map(Bucket::name)
+                .toList();
+        return new ResponseEntity<>(buckets, HttpStatus.OK);
+    }
 }
